--- a/cake.component.html
+++ b/cake.component.html
@@ -1,5 +1,5 @@
 <p>
-  {{cakeToShow.baker}}
+  Baked by {{cakeToShow.baker}}
 </p>
 <img [src]="cakeToShow.url" [alt]="cakeToShow.url">
 <div *ngIf="cakeToShow.ratings">
