--- a/rate.component.html
+++ b/rate.component.html
@@ -7,5 +7,8 @@
     <option value=5>5</option>
   </select><br>
   <input type="text" name="comments" [(ngModel)]="newRating.comments" placeholder="Type your comment here">
-  <button (click)="rateCake()">Rate {{this.cake}}</button>
+  <button (click)="rateCake()">Rate</button>
+  <div *ngIf="rateErrs">
+    <p *ngIf="rateErrs.errors.comments">{{ rateErrs.errors.comments.message }}</p>
+  </div>
 </form>
